--- a/css/style-aboutme.css
+++ b/css/style-aboutme.css
@@ -346,6 +346,23 @@ a.ddott:hover {
     line-height: 21, 09px;
 }
 
+.popup-close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 15px;
+    right: 15px;
+    overflow: hidden;
+    transition: all o.6s ease-in-out;
+    cursor: pointer;
+}
+
+.popup-close:hover {
+    border-radius: 50%;
+    transform: rotate(360deg);
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+}
+
 .active-link {
     color: #21387e;
     background-color: #FFFFFF;
