--- a/css/style-aboutme.css
+++ b/css/style-aboutme.css
@@ -266,6 +266,7 @@ a.ddott:hover {
     text-align: center;
     padding: 0%;
     margin: 0px 0px 30px;
+    margin-bottom: -20px;
 }
 
 /* Popup */
@@ -274,14 +275,14 @@ a.ddott:hover {
     display: none;
     position: absolute;
     z-index: 2;
-    bottom: 0;
+    bottom: 0px;
     left: 50%;
     transform: translate(-50%, -35%);
     box-sizing: border-box;
     width: 100%;
     max-width: 500px;
     min-height: 418px;
-    padding: 26px 28px 50px;
+    padding: 26px 0px 0px;
     background: #FFFFFF;
     border: 1px solid #213B7E;
     background-color: #FFFFFF;
@@ -312,8 +313,7 @@ a.ddott:hover {
     font-size: 24px;
     line-height: 28px;
     color: #808080;
-    padding: 0px;
-    padding: 0 0 0 10px;
+
 }
 
 .login-password {
@@ -327,7 +327,7 @@ a.ddott:hover {
     font-size: 24px;
     line-height: 28px;
     color: #808080;
-    padding: 0 0 0 10px;
+
 }
 
 .popup-button {
@@ -348,8 +348,8 @@ a.ddott:hover {
 
 .popup-close {
     position: absolute;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     top: 15px;
     right: 15px;
     overflow: hidden;
