--- a/css/style-aboutme.css
+++ b/css/style-aboutme.css
@@ -353,14 +353,14 @@ a.ddott:hover {
     top: 15px;
     right: 15px;
     overflow: hidden;
-    transition: all o.6s ease-in-out;
     cursor: pointer;
 }
 
 .popup-close:hover {
     border-radius: 50%;
     transform: rotate(360deg);
-    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition: all o.6s ease-in-out;
+    -webkit-transition: 0.6s ease-in-out;
 }
 
 .active-link {
